actualización codigo adactacion movil
se arreglo el codigo css y js para responsive de los titulos y certificados (tooltip)

--- a/styles.css
+++ b/styles.css
@@ -1874,7 +1874,14 @@ img{
 
 
 
-
+@media (hover: hover) {
+    .tooltip:hover .tooltip-img {
+      opacity: 1;
+      transform: scale(1);
+      pointer-events: auto;
+    }
+  }
+  
 /* Estilos para el contenedor principal del tooltip */
 .tooltip {
     position:relative;
