--- a/styles.css
+++ b/styles.css
@@ -1021,9 +1021,9 @@ img{
     z-index: 10;
     box-shadow: 0px 10px 5px 5px rgba(0, 0, 0, 0.5);
 }
-
+/*
 .img_gallery:not(:hover), .video_gallery:not(:hover) {
-}
+}*/
 
 /* Lightbox */
 .lightbox {
